--- a/LibFt/libft/Makefile
+++ b/LibFt/libft/Makefile
@@ -22,7 +22,13 @@ FILES = ft_isprint.c \
 		ft_memchr.c\
 		ft_memcmp.c\
 		ft_strnstr.c\
-
+		ft_memccpy.c\
+		ft_calloc.c\
+		ft_strdup.c\
+		ft_substr.c\
+		ft_strjoin.c\
+		ft_strtrim.c\
+		
 FILES_OBJS=$(FILES:.c=.o)
 
 all : $(NAME)
