--- a/LibFt/libft/Makefile
+++ b/LibFt/libft/Makefile
@@ -30,6 +30,11 @@ FILES = ft_isprint.c \
 		ft_strtrim.c\
 		ft_split.c\
 		ft_itoa.c\
+		ft_strmapi.c\
+		ft_putchar_fd.c\
+		ft_putstr_fd.c\
+		ft_putendl_fd.c\
+		ft_putnbr_fd.c\
 		
 FILES_OBJS=$(FILES:.c=.o)
 
