--- a/LibFt/libft/Makefile
+++ b/LibFt/libft/Makefile
@@ -35,6 +35,7 @@ FILES =	ft_isprint.c \
 		ft_putstr_fd.c\
 		ft_putendl_fd.c\
 		ft_putnbr_fd.c\
+		ft_striteri.c\
 
 BONUS_FILES = ft_lstnew.c \
 			  ft_lstadd_front.c\
